--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.9.3",
     "styled-components": "^6.1.19",
+    "swiper": "^12.0.2",
     "vite-plugin-svgr": "^4.5.0",
     "zustand": "^5.0.8"
   },
